Another attempt at fixing visibility issue of list

--- a/css/style.css
+++ b/css/style.css
@@ -195,11 +195,11 @@ nav a {
   font-size: 20px;
 }
 
-.bigList {
+#bigList {
   display: none;
 }
 
-.phoneList {
+#phoneList {
   display: block;
 }
 
@@ -273,11 +273,11 @@ nav a {
     float: right;
   }
 
-  .bigList {
+  #bigList {
     display: block;
   }
 
-  .phoneList {
+  #phoneList {
     display: none;
   }
 }
@@ -298,8 +298,6 @@ nav a {
     flex-direction: row;
     justify-content: center;
   }
-
-
 
   .mugshot {
     position: relative;
